test/snapshot/negative/strict_mode_injection/Main.hx
class Main {
  static function main() {
    __go__("fmt.Println(1)");
  }
}
